--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "zone.js": "^0.8.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+    "@types/socket.io-client": "^1.4.29",
+    "angular2-jwt": "^0.2.3",
+    "socket.io": "^2.0.1",
+    "socket.io-client": "^2.0.1",
+    "socketio-jwt": "^4.5.0",
     "zone.js": "^0.8.4"
+
   },
   "devDependencies": {
     "@angular/cli": "1.1.1",
